Ajustes no projeto

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Registrar Ocorrência</h1>
+        <h1>Registrar Ocorrência de Falha</h1>
         <form action="/registrar" method="post">
             <label>Nome:</label>
             <input type="text" name="nome" required>
